--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -3,9 +3,9 @@ Description=Gunicorn instance to serve 2-hbnb
 After=network.target
 
 [Service]
-User=ubuntu  # Replace with your system's username
+User=ubuntu
 Group=www-data
-WorkingDirectory=/home/ubuntu/AirBnB_clone_v4  # Replace with the directory containing your project
+WorkingDirectory=/home/ubuntu/AirBnB_clone_v4
 ExecStart=/home/ubuntu/.local/bin/gunicorn --workers 3 --bind 0.0.0.0:5003 --access-logfile /tmp/airbnb-access.log --error-logfile /tmp/airbnb-error.log web_dynamic.2-hbnb:app
 Environment="PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/ubuntu/.local/bin"
 
